# drum-machine

./: .clang-format  .gitignore  CMakeLists.txt  amp_env.csv  pitch_env.csv
.cache/clangd/index/: instrument_picker.cpp.74B1F64F56987260.idx  instrument_picker.h.EB6028E42A7344A1.idx  main.cpp.43A30D4A0A86154C.idx  main.h.89A68A8A848F501D.idx  string_constants.cpp.452C0DF65387B397.idx  string_constants.h.5E647FE6302A42C9.idx
include/: amp_envelope.h  audio_engine.h  instrument.h  instrument_picker.h  kick.h  main.h  oscillator.h  pitch_envelope.h  sequencer.h  snare.h  string_constants.h  title.h  transport.h  voice.h  volume_control.h
src/: amp_envelope.cpp  audio_engine.cpp  instrument.cpp  instrument_picker.cpp  kick.cpp  main.cpp  oscillator.cpp  pitch_envelope.cpp  sequencer.cpp  snare.cpp  string_constants.cpp  title.cpp  transport.cpp  volume_control.cpp
